@@ -15,7 +15,7 @@ LIBMAD=libmad-0.15.1b
 LIBOGG=libogg-1.2.0
 LIBVORBIS=libvorbis-1.3.1
 LIBFLAC=flac-1.2.1
-LIBPORTAUDIO=portaudio-r1508
+LIBPORTAUDIO=portaudio-r1526
 
 PORTMIXERFILES:=lib/portmixer/px_unix_oss/px_unix_oss.c
 
