@@ -66,7 +66,7 @@
 
 #define RETRY_DEFAULT	5
 #define LINE_COUNT	2
-#define OPTLEN		48
+#define OPTLEN		64
 #define FIRMWARE_VERSION	2
 #define SLIMPROTOCOL_PORT	3483
 #define PLAYER_TYPE	8
